--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">My Application</string>
     <string name="categorias">Categorias</string>
+    <string name="username_label">Nome de Usuário</string>
+    <string name="senha_label">Senha</string>
+    <string name="btn_login">Fazer Login</string>
+
 </resources>
